# Linux_dev_2020

02_Hello_world/: prog
03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile
05_Environmental/: Makefile.am  Windows.c  configure.ac  pcredemo.c
06_Debugging/: double-free.c
07_DebuggingTracing/: Makefile  Makefile.am  configure.ac  fake_unlinkat.c
07_DebuggingTracing/src/: Makefile.am
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/src/: buf.h  libbuf.c
08_TestingCoverage/tests/: stest.ts
09_I18nL10n/: guessnumber.c  guessnumber.pot
10_Documenting/: Makefile.am  configure.ac  generator_romantable.py  guessnumber.c  messages.pot  romantable.txt  ru.po
11_Toolkits/: Makefile.am  configure.ac  input.txt  prog.c
12_ScriptingText/: Makefile.am  configure.ac
12_ScriptingText/src/: Makefile.am  buf.h  libbuf.c
12_ScriptingText/tests/: stest.c
13_PatchInstall/: Makefile.am  configure.ac  guessnumber.c  ru.po
